<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.auth.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/person_24"
        android:contentDescription="@string/logo_image_login"/>

    <TextView
        android:id="@+id/tv1_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudah_siap_untuk_berbagi_cerita"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv2_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masukan_dulu_datamu_ya"
        android:textSize="14sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"/>

    <com.aryanto.storyappfinal.ui.custom_view.EmailEdt
        android:id="@+id/email_edt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <com.aryanto.storyappfinal.ui.custom_view.PasswordEdt
        android:id="@+id/password_edt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_submit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/login"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv3_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#534cb8"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:visibility="gone"/>

</LinearLayout>